fixing icons alignment

--- a/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
+++ b/plugins/CoreHome/stylesheets/dataTable/_dataTable.less
@@ -511,9 +511,9 @@ tr.level12 td.label {
 
 /* less right margins for the link image in the Pa*/
 .dataTableActions table.dataTable img.link {
-  margin-right: 0.5em;
-  margin-left: 1px;
-  margin-bottom: 4px;
+  margin-right: 6px;
+  margin-left: 3px !important;
+  margin-bottom: 8px;
   vertical-align: text-bottom;
 }
 
@@ -525,7 +525,7 @@ table.dataTable td.label img {
 tr td.label img.plusMinus {
   margin-left: -3px;
   margin-right: 6px;
-  margin-top: 0;
+  margin-top: 1px;
 }
 
 .pk-emptyDataTable {
